--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,6 @@
                 </div>
             </div>
         </div>
-        
+       <script src="js/data.js"></script> 
     </body>
 </html> 
